# ragflow-gateway

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 07680eeac12f_add_avatar_nickname_to_user_model.py  2ab844e04a4a_add_display_name_for_role.py  7fa4513384c9_update_user_invitecode_ragflow_tables.py  96f1b105afcb_initial.py  aaa87b44ddad_rename_hashed_password_field.py  c7d609ab9a70_add_ragflow_dataset_document_tables.py  cfac8e7fdbe4_add_fields_for_user.py  d74aa789647f_add_timestamps_to_user_model.py
configs/: permissions.yaml
docs/: development_guide.md
scripts/: entrypoints.sh
src/app/: __init__.py  main.py
src/app/api/v1/: __init__.py
src/app/cli/: init_perms.py
src/app/constants/: roles.py
src/app/core/: __init__.py  db.py  exception_handlers.py  exceptions.py  jwt.py  lifespan.py  logging.py  paths.py  redis.py  security.py  settings.py
src/app/core/validators/: password.py
src/app/models/: __init__.py  auth.py  mixin.py
src/app/models/iam/: __init__.py  permission.py  role.py  through.py  user.py
src/app/models/ragflow/: __init__.py  dataset.py
src/app/models/registration/: __init__.py  policy.py
src/app/repositories/: __init__.py  auth.py  base.py
src/app/repositories/iam/: __init__.py  permission.py  role.py  user.py
src/app/schemas/: __init__.py  pagination.py  response.py
src/app/services/: __init__.py  auth.py  base.py
src/app/tasks/: __init__.py  worker.py
tests/: test_ragflow_client.py
(+37 files in other folders)
